tests/rosetta/transpiler/Swift/amicable-pairs.error
exit status 1
/tmp/TestSwiftTranspiler_Rosetta_Golden619418350/001/main.swift:44:1: warning: using '_' to ignore the result of a Void-returning function is redundant
42 |     }
43 | }
44 | _ = main()
   | `- warning: using '_' to ignore the result of a Void-returning function is redundant
45 | 

/tmp/TestSwiftTranspiler_Rosetta_Golden619418350/001/main.swift:9:30: warning: forced cast of 'Int' to same type has no effect
 7 |     while (p <= (i / 2)) {
 8 |         if ((i % p) == 0) {
 9 |             sum = ((sum + p) as! Int)
   |                              `- warning: forced cast of 'Int' to same type has no effect
10 |         }
11 |         p = ((p + 1) as! Int)

/tmp/TestSwiftTranspiler_Rosetta_Golden619418350/001/main.swift:11:22: warning: forced cast of 'Int' to same type has no effect
 9 |             sum = ((sum + p) as! Int)
10 |         }
11 |         p = ((p + 1) as! Int)
   |                      `- warning: forced cast of 'Int' to same type has no effect
12 |     }
13 |     return (sum as! Int)

/tmp/TestSwiftTranspiler_Rosetta_Golden619418350/001/main.swift:13:17: warning: forced cast of 'Int' to same type has no effect
11 |         p = ((p + 1) as! Int)
12 |     }
13 |     return (sum as! Int)
   |                 `- warning: forced cast of 'Int' to same type has no effect
14 | }
15 | func pad(_ n: Int, _ width: Int) -> String {

/tmp/TestSwiftTranspiler_Rosetta_Golden619418350/001/main.swift:16:13: error: no exact matches in call to initializer 
14 | }
15 | func pad(_ n: Int, _ width: Int) -> String {
16 |     var s = String(String(describing: n))!
   |             |- error: no exact matches in call to initializer 
   |             `- note: found candidate with type '(String) -> String'
17 |     while (Int(((s).count)) < width) {
18 |         s = ((" " + s) as! String)

Swift.String.init:3:21: note: incorrect labels for candidate (have: '(_:)', expected: '(validatingCString:)')
1 | struct String {
2 | @available(*, deprecated, message: "Use a copy of the String argument")
3 |   @inlinable public init?(validatingCString nullTerminatedUTF8: String)}
  |                     `- note: incorrect labels for candidate (have: '(_:)', expected: '(validatingCString:)')
4 | 

Swift.String.init:3:21: note: incorrect labels for candidate (have: '(_:)', expected: '(validatingUTF8:)')
1 | struct String {
2 | @available(*, deprecated, message: "Use a copy of the String argument")
3 |   @inlinable public init?(validatingUTF8 cString: String)}
  |                     `- note: incorrect labels for candidate (have: '(_:)', expected: '(validatingUTF8:)')
4 | 

Foundation.String.init:3:10: note: incorrect labels for candidate (have: '(_:)', expected: '(utf8String:)')
1 | struct String {
2 | @available(*, deprecated, message: "Use a copy of the String argument")
3 |   public init?(utf8String bytes: String)}
  |          `- note: incorrect labels for candidate (have: '(_:)', expected: '(utf8String:)')
4 | 

/tmp/TestSwiftTranspiler_Rosetta_Golden619418350/001/main.swift:18:24: warning: forced cast of 'String' to same type has no effect
16 |     var s = String(String(describing: n))!
17 |     while (Int(((s).count)) < width) {
18 |         s = ((" " + s) as! String)
   |                        `- warning: forced cast of 'String' to same type has no effect
19 |     }
20 |     return (s as! String)

/tmp/TestSwiftTranspiler_Rosetta_Golden619418350/001/main.swift:27:22: warning: forced cast of 'Int' to same type has no effect
25 |     while (i < 20000) {
26 |         sums = ((sums + [0]) as! [Int])
27 |         i = ((i + 1) as! Int)
   |                      `- warning: forced cast of 'Int' to same type has no effect
28 |     }
29 |     i = 1

/tmp/TestSwiftTranspiler_Rosetta_Golden619418350/001/main.swift:31:34: warning: forced cast of 'Int' to same type has no effect
29 |     i = 1
30 |     while (i < 20000) {
31 |         sums[i] = Int(pfacSum((i as! Int)))
   |                                  `- warning: forced cast of 'Int' to same type has no effect
32 |         i = ((i + 1) as! Int)
33 |     }

/tmp/TestSwiftTranspiler_Rosetta_Golden619418350/001/main.swift:32:22: warning: forced cast of 'Int' to same type has no effect
30 |     while (i < 20000) {
31 |         sums[i] = Int(pfacSum((i as! Int)))
32 |         i = ((i + 1) as! Int)
   |                      `- warning: forced cast of 'Int' to same type has no effect
33 |     }
34 |     print("The amicable pairs below 20,000 are:")

/tmp/TestSwiftTranspiler_Rosetta_Golden619418350/001/main.swift:39:55: warning: forced cast of 'Int' to same type has no effect
37 |         let m = Int(sums[n])
38 |         if (((m > n) && (m < 20000)) && (n == Int(sums[m]))) {
39 |             print(((("  " + String(describing: pad((n as! Int), 5))) + " and ") + String(describing: pad((m as! Int), 5))))
   |                                                       `- warning: forced cast of 'Int' to same type has no effect
40 |         }
41 |         n = ((n + 1) as! Int)

/tmp/TestSwiftTranspiler_Rosetta_Golden619418350/001/main.swift:39:109: warning: forced cast of 'Int' to same type has no effect
37 |         let m = Int(sums[n])
38 |         if (((m > n) && (m < 20000)) && (n == Int(sums[m]))) {
39 |             print(((("  " + String(describing: pad((n as! Int), 5))) + " and ") + String(describing: pad((m as! Int), 5))))
   |                                                                                                             `- warning: forced cast of 'Int' to same type has no effect
40 |         }
41 |         n = ((n + 1) as! Int)

/tmp/TestSwiftTranspiler_Rosetta_Golden619418350/001/main.swift:41:22: warning: forced cast of 'Int' to same type has no effect
39 |             print(((("  " + String(describing: pad((n as! Int), 5))) + " and ") + String(describing: pad((m as! Int), 5))))
40 |         }
41 |         n = ((n + 1) as! Int)
   |                      `- warning: forced cast of 'Int' to same type has no effect
42 |     }
43 | }
